fix: login/signup navbar overlap

--- a/public/stylesheets/login-signup.css
+++ b/public/stylesheets/login-signup.css
@@ -1,3 +1,7 @@
+.topbar {
+  position: static;
+}
+
 .topbar-spacer {
   display: none;
 }
